--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     </div>
 
-    <script src="../BookStore-main/mainjs/index.js"></script>
+    <script src="../mainjs/index.js"></script>
     
 </body>
 </html>
