--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
 
     </div>
 
-    <script src="../BookStore-main/mainjs/login.js"></script>
+    <script src="../mainjs/login.js"></script>
     
 </body>
 </html>
