--- a/login.html
+++ b/login.html
@@ -25,11 +25,11 @@
             <!-- <input type="button" value="Submit" id="btn" > -->
         </form> 
         
-        <p>Dont have an account?  then <a href="index.html">Register</a></p>
+        <p id="message">Dont have an account?  then <a href="index.html">Register</a></p>
 
     </div>
 
-    <script src="../mainjs/login.js"></script>
+    <script src="login.js"></script>
     
 </body>
 </html>
