--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
             <!-- <input type="button" value="Submit" id="btn" > -->
         </form> 
         
-        <p>Already Registered? then <a href="login.html">Login</a></p>
+        <p id="message">Already Registered? then <a href="login.html">Login</a></p>
+        <p ></p>
 
     </div>
 
-    <script src="../BookStore-main/mainjs/index.js"></script>
+    <script src="index.js"></script>
     
 </body>
 </html>
